--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta http-equiv="content-type" content="text/html; charset=utf-8">
-        <title>Game</title>
-        <style>
-            *{margin:0;padding:0}
-            canvas{background:#eee;display:block;margin:0 auto}
-        </style>
+      <meta http-equiv="content-type" content="text/html; charset=utf-8">
+      <title>Game</title>
+      <link rel="stylesheet" type="text/css" href="stylesheet.css">
     </head>
     <body>
-        <canvas id="gamecanvas" width="480" height="302"></canvas>
-        <script src="js/app.js"></script>
+      <canvas id="gamecanvas" width="480px" height="302px"></canvas>
+      <script src="source/size.js"></script>
+      <script src="source/point.js"></script>
+      <script src="source/rect.js"></script>
+      <script src="source/ball.js"></script>
+      <script src="source/paddle.js"></script>
+      <script src="source/brick.js"></script>
+      <script src="source/Board.js"></script>
+      <script src="source/levels.js"></script>
+      <script src="source/game.js"></script>
     </body>
 </html>
