added level genrator

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     </head>
     <body>
       <canvas id="gamecanvas" width="480px" height="302px"></canvas>
+
+      <script src="source/levels2.js"></script>
       <script src="source/size.js"></script>
       <script src="source/point.js"></script>
       <script src="source/rect.js"></script>
