--- a/index.html
+++ b/index.html
@@ -8,43 +8,72 @@
     </head>
     <body>
       <div class="container">
-        <div id="home" class="menu window">
-          <div class="btnContainer">
-            <img src="img/logo.jpg" alt="" width="150px">
-            <button onclick="navigateTo('game')">Start</button>
-            <button onclick="navigateTo('levels')">Levels</button>
+        <div id="menu" class="window">
+          <div class="menu-items">
+            <img src="img/logo.jpg" id="logo" alt="">
+            <button onclick="navigateFromTo('menu','play')">Start</button>
+            <button onclick="navigateFromTo('menu','level')">Levels</button>
             <button>Sounds ON</button>
             <button>Music ON</button>
           </div>
         </div>
-        <div id="levels" class="menu window">
-          <div class="lvlContainer">
-            <div class="levelCard">Level 01</div>
-            <div class="levelCard">Level 02</div>
-            <div class="levelCard">Level 03</div>
-            <div class="levelCard">Level 03</div>
+        <div id="level" class="window" style="display:none">
+          <div class="menu-bar">
+            <button onclick="navigateFromTo('level','menu','table')">Home</button>
+            <span>Levels</span>
+          </div>
+          <div class="lvl-card" onclick="navigateFromTo('level','play')">
+            <img src="img/poster.png" alt="" class="lvl-poster">
+            <span class="lvl-name">Level 1</span>
+          </div>
+          <div class="lvl-card">
+            <img src="img/poster.png" alt="" class="lvl-poster">
+            <span class="lvl-name">Level 2</span>
+            <span class="lvl-lock">LOCKED</span>
+          </div>
+          <div class="lvl-card">
+            <img src="img/poster.png" alt="" class="lvl-poster">
+            <span class="lvl-name">Level 3</span>
+            <span class="lvl-lock">LOCKED</span>
+          </div>
+          <div class="lvl-card">
+            <img src="img/poster.png" alt="" class="lvl-poster">
+            <span class="lvl-name">Level 4</span>
+            <span class="lvl-lock">LOCKED</span>
+          </div>
+          <div class="lvl-card">
+            <img src="img/poster.png" alt="" class="lvl-poster">
+            <span class="lvl-name">Level 5</span>
+            <span class="lvl-lock">LOCKED</span>
+          </div>
+          <div class="lvl-card">
+            <img src="img/poster.png" alt="" class="lvl-poster">
+            <span class="lvl-name">Level 6</span>
+            <span class="lvl-lock">LOCKED</span>
+          </div>
+          <div class="lvl-card">
+            <img src="img/poster.png" alt="" class="lvl-poster">
+            <span class="lvl-name">Level 7</span>
+            <span class="lvl-lock">LOCKED</span>
+          </div>
+          <div class="lvl-card">
+            <img src="img/poster.png" alt="" class="lvl-poster">
+            <span class="lvl-name">Level 8</span>
+            <span class="lvl-lock">LOCKED</span>
           </div>
         </div>
-        <div id="game" class="">
-          <!--<div id="play">PLAY</div>-->
-          <canvas id="gamecanvas" width="720" height="480"></canvas>
+        <div id="play" class="window" style="display:none">
+          <canvas id="gamecanvas" width="700" height="460"></canvas>
+        </div>
+        <div id="user" class="window" style="display:none">
+
         </div>
       </div>
       <script>
-      var menuCont = document.getElementById("home");
-      var gameCont = document.getElementById("game");
-      var lvlCont = document.getElementById("levels");
-      function navigateTo(id){
-        hideAllWindows();
-        document.getElementById(id).style.display='block';
+      function navigateFromTo(sender,id,display='block'){
+        document.getElementById(sender).style.display='none';
+        document.getElementById(id).style.display=display;
       }
-      function hideAllWindows(){
-        menuCont.style.display = 'none';
-        gameCont.style.display = 'none';
-        lvlCont.style.display = 'none';
-      }
-      hideAllWindows();
-      menuCont.style.display = 'table';
       </script>
       <script src="source/levels2.js"></script>
       <script src="source/size.js"></script>
