--- a/index.html
+++ b/index.html
@@ -98,8 +98,11 @@
       </script>
       <script src="source/levels2.js"></script>
       <script src="source/size.js"></script>
+       <script src="source/accel.js"></script>
+         <script src="source/line.js"></script>
       <script src="source/point.js"></script>
       <script src="source/rect.js"></script>
+    <script src="source/hithelpers.js"></script>
       <script src="source/ball.js"></script>
       <script src="source/paddle.js"></script>
       <script src="source/Board.js"></script>
