--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
       <script src="source/paddle.js"></script>
       <script src="source/Board.js"></script>
       <script src="source/levels.js"></script>
-      <script src="source/game.js"></script>
+      <script src="source/game2.js"></script>
+      <script src="source/runloop.js"></script>
     </body>
 </html>
