--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div id="bar"></div>
           </div>
         </div>
-        <div id="menu" class="window">
+        <div id="menu" class="window" style="display:none">
           <div class="menu-items">
             <img src="img/logo.jpg" id="logo" alt="">
             <button onclick="navigateFromTo('menu','play')">Start <i class="icon-gamepad"></i></button>
@@ -31,11 +31,11 @@
             </button>
             <span>Levels</span>
           </div>
-          <div class="lvl-container">
+          <div id="lvl-container">
             <div class="lvl-card" onclick="navigateFromTo('level','play')">
             <img src="img/poster.png" alt="" class="lvl-poster">
             <span class="lvl-name">Level 1</span>
-          </div>
+            </div>
             <div class="lvl-card">
             <img src="img/poster.png" alt="" class="lvl-poster">
             <span class="lvl-name">Level 2</span>
@@ -73,20 +73,22 @@
           </div>
           </div>
         </div>
-        <div id="play" class="window" style="display:none">
+        <div id="play" class="window">
           <div id="player-controls">
-              <span id="profile">
+              <span id="profile" class="player-btn">
                   <i class="icon-user-1"></i>
               </span>
-              <span id="score-lable">Score:</span>
-              <span id="score">0</span>
-              <span id="lives">
+              <span id="lives" class="player-btn">
                   <i class="icon-heart-2"></i>
                   <i class="icon-heart-2"></i>
                   <i class="icon-heart-2"></i>
               </span>
-              <span id="btn-pause" onclick="togglePlaying()"><i id="play-btn" class="icon-play"></i></span>
-              <span id="player-home" onclick="navigateFromTo('play','menu','table')">
+              <span id="score-lable" class="player-btn">Score:</span>
+              <span id="score" class="player-btn">0</span>
+              <span id="btn-pause" class="player-btn" onclick="togglePlaying()"><i id="play-btn" class="icon-play"></i></span>
+              <span id="btn-sound" class="player-btn"><i class="icon-volume-up"></i></span>
+              <span id="btn-music" class="player-btn"><i class="icon-music"></i></span>
+              <span id="player-home" class="player-btn" onclick="navigateFromTo('play','menu','table')">
                   <i class="icon-home-1"></i>
               </span>
           </div>
