player cloud background added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
       <link rel="stylesheet" type="text/css" href="css/fontello-embedded.css">
+      <link rel="stylesheet" type="text/css" href="css/bg-animation.css">
     </head>
     <body>
       <div class="container">
@@ -98,6 +99,16 @@
                 <i class="icon-play-circled2"></i>
             </div>
             <canvas id="gamecanvas" width="750" height="500"></canvas>  
+            <div id="clouds">
+                <div class="cloud x1"></div>
+                <div class="cloud x2"></div>
+                <div class="cloud x3"></div>
+                <div class="cloud x4"></div>
+                <div class="cloud x5"></div>
+                <div class="cloud x6"></div>
+                <div class="cloud x7"></div>
+                <div class="cloud x8"></div>
+            </div>
           </div>
         </div>
         <div id="user" class="window" style="display:none">
