added player and session save

--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
       }
       //loading();
       </script>
+      <script src="source/session.js"></script>
       <script src="source/levels2.js"></script>
       <script src="source/size.js"></script>
       <script src="source/accel.js"></script>
@@ -161,6 +162,7 @@
       <script src="source/Board.js"></script>
       <script src="source/levels.js"></script>
       <script src="source/game2.js"></script>
+      <script src="source/player.js"></script>
       <script src="source/runloop.js"></script>
     </body>
 </html>
