added sound/music switches to home menu

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <link rel="stylesheet" type="text/css" href="css/fontello-embedded.css">
       <link rel="stylesheet" type="text/css" href="css/bg-animation.css">
       <link rel="stylesheet" type="text/css" href="css/menu-clouds.css">
+      <link rel="stylesheet" type="text/css" href="css/animation.css">
     </head>
     <body>
       <div class="container">
@@ -19,6 +20,8 @@
         </div>
         <div id="menu" class="window">
             <div id="menu-top">
+                <span id="menu-music-btn" class="btn player-btn"><i class="icon-music"></i></span>
+                <span id="menu-volume-btn" class="btn player-btn"><i class="icon-volume-up"></i></span>
                 <div id="menu-logo">
                     <i class="icon-pied-piper"></i>
                 </div>
