Refactoring and level changer

--- a/index.html
+++ b/index.html
@@ -250,17 +250,15 @@
       //loading();
       </script>
       <script src="source/session.js"></script>
-      <script src="source/levels2.js"></script>
-      <script src="source/size.js"></script>
-      <script src="source/point.js"></script>
-      <script src="source/rect.js"></script>
+      <script src="source/asset.js"></script>
+      <script src="source/component.js"></script>
       <script src="source/hithelpers.js"></script>
       <script src="source/ball.js"></script>
       <script src="source/paddle.js"></script>
       <script src="source/Board.js"></script>
-      <script src="source/levels.js"></script>
-      <script src="source/game2.js"></script>
+      <script src="source/levelsGenerator.js"></script>
       <script src="source/player.js"></script>
+      <script src="source/game.js"></script>
       <script src="source/runloop.js"></script>
     </body>
 </html>
