--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div id="bar"></div>
           </div>
         </div>
-        <div id="menu" class="window">
+        <div id="menu" class="window" style="display:none">
             <div id="menu-top">
                 <span id="menu-music-btn" class="btn player-btn"><i class="icon-music"></i></span>
                 <span id="menu-volume-btn" class="btn player-btn"><i class="icon-volume-up"></i></span>
@@ -65,42 +65,34 @@
             <div class="lvl-card">
             <img src="img/poster.png" alt="" class="lvl-poster">
             <span class="lvl-name">Level 2</span>
-            <span class="lvl-lock"><i class="icon-lock"></i></span>
             </div>
             <div class="lvl-card">
             <img src="img/poster.png" alt="" class="lvl-poster">
             <span class="lvl-name">Level 3</span>
-            <span class="lvl-lock"><i class="icon-lock"></i></span>
             </div>
             <div class="lvl-card">
             <img src="img/poster.png" alt="" class="lvl-poster">
             <span class="lvl-name">Level 4</span>
-            <span class="lvl-lock"><i class="icon-lock"></i></span>
             </div>
             <div class="lvl-card">
             <img src="img/poster.png" alt="" class="lvl-poster">
             <span class="lvl-name">Level 5</span>
-            <span class="lvl-lock"><i class="icon-lock"></i></span>
             </div>
             <div class="lvl-card">
             <img src="img/poster.png" alt="" class="lvl-poster">
             <span class="lvl-name">Level 6</span>
-            <span class="lvl-lock"><i class="icon-lock"></i></span>
             </div>
             <div class="lvl-card">
             <img src="img/poster.png" alt="" class="lvl-poster">
             <span class="lvl-name">Level 7</span>
-            <span class="lvl-lock"><i class="icon-lock"></i></span>
             </div>
             <div class="lvl-card">
             <img src="img/poster.png" alt="" class="lvl-poster">
             <span class="lvl-name">Level 8</span>
-            <span class="lvl-lock"><i class="icon-lock"></i></span>
             </div>
             <div class="lvl-card">
             <img src="img/poster.png" alt="" class="lvl-poster">
             <span class="lvl-name">Level 9</span>
-            <span class="lvl-lock"><i class="icon-lock"></i></span>
             </div>
           </div>
         </div>
@@ -142,7 +134,7 @@
             </div>
           </div>
         </div>
-        <div id="profile" class="window" style="display:none">
+        <div id="profile" class="window">
           <div class="menu-bar">
             <button class="btn" onclick="navigateFromTo('profile','menu','table')">
             <i class="icon-home-1"></i>
@@ -184,14 +176,12 @@
             </div>
             <div id="profile-bottom">
                 <div id="paddle-slider" class="slider">
-                  <span class="btn-nav right-nav"><i class="icon-right-open"></i></span>
-                  <span class="btn-nav left-nav"><i class="icon-left-open"></i></span>
-                  <div class="paddle-img"><img src="img/bluepaddle.png" alt=""></div>
+                  <span class="btn-nav right-nav" onclick="slider.Slide('paddle','right')"><i class="icon-right-open"></i></span>
+                  <span class="btn-nav left-nav" onclick="slider.Slide('paddle','left')"><i class="icon-left-open"></i></span>
                 </div>
                 <div id="ball-slider" class="slider">
-                  <span class="btn-nav right-nav"><i class="icon-right-open"></i></span>
-                  <span class="btn-nav left-nav"><i class="icon-left-open"></i></span>
-                  <div class="paddle-img"><img src="img/blueball.png" alt=""></div>
+                  <span class="btn-nav right-nav" onclick="slider.Slide('ball','right')"><i class="icon-right-open"></i></span>
+                  <span class="btn-nav left-nav" onclick="slider.Slide('ball','left')"><i class="icon-left-open"></i></span>
                 </div>
             </div>
           </div>
@@ -264,5 +254,6 @@
       <script src="source/game2.js"></script>
       <script src="source/player.js"></script>
       <script src="source/runloop.js"></script>
+      <script src="source/slider.js"></script>
     </body>
 </html>
