--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
       }
       //loading();
       </script>
+      <script src="source/soundManager.js"></script>
       <script src="source/session.js"></script>
       <script src="source/asset.js"></script>
       <script src="source/component.js"></script>
